# fastapimsal

./: .gitignore  .pre-commit-config.yaml  .python-lint  LICENSE  README.md  mypy.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/linters/: .mypy.ini  .python-lint
.github/workflows/: lint.yaml  test.yaml  tests.yaml
examples/: app.py
fastapiauth/: __init__.py  auth_routes.py  config.py  init_auth.py  oauth2.py  token_factory.py
fastapimsal/: __init__.py  auth_routes.py  config.py  init_auth.py  security.py  types.py  utils.py
fastapimsal/backend/: __init__.py  authentication.py
fastapimsal/frontend/: __init__.py  authentication.py
tests/: conftest.py  test_fastapiauth.py  test_frontend_auth.py
